Add failing test case